vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__side_context_label_shows_parent_status.snap
---
source: tui/src/chatwidget/tests/side.rs
assertion_line: 311
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Check recently modified functions for compatibility                           "
"                                                                                "
"  gpt-5.5 auto · /tm… Side from main thread · main needs input · Esc to return  "
