vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__slash_side_requests_branched_side_question_while_task_running.snap
---
source: crates/surfaces/tui/src/chatwidget/tests/side.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (9s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask VAC to do anything                                                        "
"                                                                                "
"  gpt-5.5 auto                                                Side starting...  "
