vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__status_line_model_with_reasoning_fast_footer.snap
---
source: crates/surfaces/tui/src/chatwidget/tests/status_and_layout.rs.inc
assertion_line: 1565
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask VAC to do anything                                                        "
"                                                                                "
"  gpt-5.4 xhigh fast · Context 0% used · /tmp/project                           "
