vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__status_line_model_with_reasoning_plan_mode_footer.snap
---
source: crates/surfaces/tui/src/chatwidget/tests/status_and_layout.rs.inc
assertion_line: 1493
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask VAC to do anything                                                        "
"                                                                                "
"  gpt-5.3-vac medium                            Plan mode (shift+tab to cycle)  "
